--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "phoenix": "rm -rf node_modules & npm i"
   },
   "dependencies": {
+    "@vercel/speed-insights": "^1.0.1",
     "autoprefixer": "10.4.14",
     "eslint-config-next": "13.3.2",
     "framer-motion": "^10.12.7",
