--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "autoprefixer": "10.4.14",
     "eslint-config-next": "13.3.2",
     "framer-motion": "^10.12.7",
-    "next": "13.3.2",
+    "next": "^13.5.6",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
